# cpp_programming_practice

./: README.md
homework/hw1/: CMakeLists.txt  Timer.cpp  Timer.h  main.cpp  questions.md  task1.cpp  task2.cpp  task3.cpp  task4.cpp
homework/hw10/: questions.md
homework/hw11/: questions.md  task2.cpp
homework/hw2/: CMakeLists.txt  Phonebook.h  questions.md  task1.cpp  task2.cpp  task3.cpp  task4.cpp
homework/hw3/: CMakeLists.txt  questions.md  task.cpp  task1.cpp
homework/hw4/: CMakeLists.txt  Human.cpp  Human.h  main.cpp  questions.md  task1.cpp  task2.cpp  task3.cpp  task4.cpp
homework/hw5/: Length.cpp  TestClassA.h  TestClassB.cpp  TestClassB.h  Vector.cpp  task4a.cpp  task4b.cpp
homework/hw6/: CMakeLists.txt  Fraction.cpp  Fraction.h  questions.md  task1.cpp  task2.cpp
homework/hw7/: Shapes.h  main.cpp  questions.md
homework/hw8/: Fraction.h  questions.md  task2.cpp
homework/hw9/: Vector.h  questions.md  task1.cpp
lessons/l2/: CMakeLists.txt  ass.cpp  lesson.md  main.cpp
lessons/l3/: CMakeLists.txt  algos.cpp  iterators.cpp  randoms.cpp
lessons/lesson2/: CMakeLists.txt  array.cpp  lesson.md  main.cpp
lessons/lesson4/: CMakeLists.txt  lesson.md  structures.cpp
lessons/lesson5/: DynamicVector.h  main.cpp
lessons/lesson6/: CMakeLists.txt  lesson.md  main.cpp
sem 1/homework/hw5/: CMakeLists.txt  Length.h  TestClassA.cpp  Vector.h  questions.md  task1.cpp  task2.cpp  task3.cpp
sem 1/homework/hw7/: CMakeLists.txt  main.cpp
sem 1/homework/hw7/shapes/: Circle.cpp  Circle.h  Ellipse.h  Rectangle.cpp  Shape.cpp  Square.h  Triangle.h
(+58 files in other folders)
